--- a/package.json
+++ b/package.json
@@ -10,13 +10,18 @@
   },
   "devDependencies": {
     "@vitejs/plugin-react": "^5.1.4",
+    "autoprefixer": "^10.4.17",
+    "postcss": "^8.4.35",
     "react": "^19.2.4",
     "react-dom": "^19.2.4",
+    "tailwindcss": "^3.4.1",
     "vite": "^6.0.0"
   },
   "dependencies": {
+    "framer-motion": "^11.0.8",
     "gsap": "^3.14.2",
     "lenis": "^1.3.17",
+    "lucide-react": "^0.344.0",
     "three": "^0.182.0"
   }
 }
